# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
# add_subdirectory(jogodavelha)
# add_subdirectory(coloredtriangles_enhanced)
# add_subdirectory(regularpolygons)
# add_subdirectory(asteroids)
# add_subdirectory(rocket)
# add_subdirectory(loadmodel)
add_subdirectory(viewer1)
add_subdirectory(lookat)